2005-06-14  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Revert undocumented, unapproved
	change from Sebastian Bacher committed on 2005-05-22
	
2005-02-26  Rodney Dawes  <dobey@novell.com>

	* *.[ch]: Update Copyright to include current year

2005-02-26  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_add_image): If the filename is not
	encoded in UTF-8, we just ignore it for now to avoid crashing

	* gnome-wp-xml.c (gnome_wp_xml_load_xml): Check to make sure that the
	filename and name tags that we read in, aren't NULL
	If the filename we read in is NULL, free the item, and continue on

	Fixes #146130 #146645 (resolving these as dups of #168604 )
	Fixes #159441

2005-02-06  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Force using the gtk+
	backend for the file chooser since we don't support vfs yet

	Fixes #154978

2005-02-06  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_color_changed): Change the API to use
	the boolean argument to specify if we want to update gconf or not
	Always get the colors for both primary and secondary and update the
	thumbnail
	Only set the keys in gconf if we have the update boolean argument
	(gnome_wp_pcolor_changed): Removed this method, since we don't need
	to differentiate between primary/secondary for updating the thumbnail
	(gnome_wp_scolor_changed): When we change the color in the UI, we want
	to update gconf, we use this method for both color picker buttons now
	(gnome_wallpaper_properties_init): Use gnome_wp_scolor_changed for the
	callback on both color picker button widgets now

	Fixes #166486

2005-01-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-xml.c (gnome_wp_xml_load_xml):
	Fix compile warning for syslangs declaration
	Wrap g_get_language_names in #if GLIB_CHECK_VERSION as it is 2.6 API

2005-01-09  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.[ch] (gnome_wp_update_preview): Add new callback