@@ -1,3 +1,13 @@
+2005-07-10  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-info.c (gnome_wp_info_new): Fix some memory leaks by using
+	a separate variable to store the escaped path, and md5sum
+
+	* gnome-wp-item.c (gnome_wp_item_get_thumbnail): Fix a couple of
+	memory leaks by using a separate variable to store the escaped path
+	Don't unref the pixbuf from the thumbnail generation, and then try
+	to load it again after saving
+
 2005-06-14  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-info.c (gnome_wp_info_new): Revert undocumented, unapproved
